--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "version":2,
     "builds": [
-      { "src": "*.js", "use": "@vercel/node" }
+      { "src": "App.js", "use": "@vercel/node" }
     ],
     "routes": [
         {
